style: 전체 코드 형식 재구성
