# miniminishop/src/main/java/com/example/miniminishop/controller/handler/SelectRiderByRiderIdHandler.java
@@ -1,0 +1,36 @@
+package com.example.miniminishop.controller.handler;
+
+import com.example.miniminishop.controller.request.*;
+import com.example.miniminishop.controller.response.*;
+import com.example.miniminishop.service.CustomUserDetails;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.stereotype.Component;
+import com.example.miniminishop.controller.ResultCode;
+import java.util.List;
+
+@Slf4j
+@Component
+public class SelectRiderByRiderIdHandler extends BaseHandler {
+
+  public SelectRiderByRiderIdResponse execute(CustomUserDetails user, SelectRiderByRiderIdRequest req) {
+    SelectRiderByRiderIdResponse res = new SelectRiderByRiderIdResponse();
+
+    final long riderId = req.getRiderId();
+
+    if(emptyParam(riderId)) {
+      res.setCode(ResultCode.BadParams);
+      return res;
+    }
+
+    try {
+      // code here
+      res.setCode(ResultCode.Success);
+      return res;
+    }
+    catch(Exception e) {
+      log.error(e.toString());
+      res.setCode(ResultCode.Failed);
+      return res;
+    }
+  }
+}
