# miniminishop/src/main/java/com/example/miniminishop/controller/response/InsertRiderResponse.java
@@ -1,0 +1,16 @@
+package com.example.miniminishop.controller.response;
+
+import io.swagger.annotations.ApiModel;
+import io.swagger.annotations.ApiParam;
+import lombok.Data;
+import lombok.EqualsAndHashCode;
+import java.util.HashMap;
+import java.util.List;
+
+@EqualsAndHashCode(callSuper = true)
+@ApiModel(description = "라이더 회원 가입")
+@Data
+public class InsertRiderResponse extends BaseResponse {
+
+  public long riderId = 0;
+}
